--- a/templates/email/weekly_projects_digest.html
+++ b/templates/email/weekly_projects_digest.html
@@ -42,7 +42,6 @@
                   <tr>
                     <td style="padding: 16px 16px 8px 16px;">
                       <div style="font-size:16px; font-weight:600; color:#0f172a;">{{project_name}}</div>
-                      <div style="font-size:12px; color:#64748b;">Project ID: {{project_id}}</div>
                     </td>
                   </tr>
                   <tr>
@@ -57,6 +56,7 @@
                               <div>
                                 <div style="font-weight:600;">{{ticket_number}}</div>
                                 <div style="font-size:12px; color:#64748b;">Replace by: {{replace_by_date_formatted}} • Legal: {{legal_date_formatted}}</div>
+                                <div style="font-size:12px; color:#475569; margin-top:4px;">📍 {{location}}</div>
                               </div>
                               <div style="font-size:12px; color:#64748b; text-align:right;">
                                 {{ticket_meta}}
